# tictactoe

./: .gitignore  README.md  tictactoe.cabal
app/: Main.hs
src/: Application.hs  DB.hs  JSON.hs  Tictactoe.hs  Type.hs
static/: index.html
static/css/: main.css
static/js/: ajax.js  build.js  main.js  operation.js  section.js
