name:                tictactoe
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jgalat0/tictactoe#readme
license:             BSD3
license-file:        LICENSE
author:              Jorge Galat
maintainer:          jrgglt@gmail.com
copyright:           2016 Jorge Galat
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tictactoe
                     , JSON
                     , DB
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , wai
                     , wai-middleware-static
                     , text
                     , sqlite-simple
  default-language:    Haskell2010

executable tictactoe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tictactoe
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jgalat0/tictactoe
